[project]
name = "whatsapp-flows"
version = "1.0.0"
requires-python = "==3.13.*"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "uvicorn[standard]>=0.34.0",
    "psycopg[binary,pool]>=3.2.5",
    "phonenumbers>=9.0.1",
    "cryptography>=44.0.2",
    "pydantic>=2.10.6",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.7",
]
